test/analyze/type_check/trait_object/generic_method_error.myte
module test

trait Foo {
  fun nonGeneric(): Unit
  fun generic<T>(x: T): T
}

fun test(x: trait Foo) {
  x.nonGeneric();
  x.generic(1);
}

fun main() {}